--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
 <p><img src="resources/images/camp.jpg"></p>
 <p><img src="resources/images/phone.png"></p>
+<h4>Coming Soon for iPhone and Android</h4>
+<p><a href="#">Download Excursion (Coming Soon!)</a></p>
+<p>@ Excursion</p>
 </body>
 
 
