--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 <body>
 <h1 class="header_main">Discover hidden places in the world around you</h1>
-<p><a href="#">Download Excursion (Coming Soon!)</a></p>
+<p><a class="link_main" href="#">Download Excursion (Coming Soon!)</a></p>
 <video autoplay loop>
   <source src="resources/videos/excursion.mp4" type="video/mp4"></source>
 </video>
-<h2>Your personal travel guide</h2>
-<h4>Excursion remembers places you like, and recommends new points of interest around you.</h4>
+<h2 class="header_secondary">Your personal travel guide</h2>
+<h4 class="header_sub">Excursion remembers places you like, and recommends new points of interest around you.</h4>
 <p><img src="resources/images/camp.jpg"></p>
 <p><img src="resources/images/phone.png"></p>
 <h4 class="header_main">Coming Soon for iPhone and Android</h4>
-<p><a href="#">Download Excursion (Coming Soon!)</a></p>
+<p><a class="link_main" href="#">Download Excursion (Coming Soon!)</a></p>
 <p>@ Excursion</p>
 </body>
 
