--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 class="header_main">Discover hidden places in the world around you</h1>
     <p><a class="link_main" href="#">Download Excursion (Coming Soon!)</a></p>
     <video autoplay loop>
-      <source src="resources/videos/excursion.mp4" type="video/mp4"></source>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2 class="header_secondary">Your personal travel guide</h2>
     <h4 class="header_sub">Excursion remembers places you like, and recommends  new points of interest around you.</h4>
