--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1 class="header_main">Discover hidden places in the world around you</h1>
     <p><a class="link_main" href="#">Download Excursion (Coming Soon!)</a></p>
-    <video autoplay loop>
+    <video autoplay loop muted>
       <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
     <h2 class="header_secondary">Your personal travel guide</h2>
